@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.2 2004/07/14 00:25:11 xtraeme Exp $
+$NetBSD: distinfo,v 1.3 2004/10/27 13:54:41 xtraeme Exp $
 
-SHA1 (jabberd-2.0s3.tar.gz) = 9a592f71e45445db7aca20b8fd87b97ae9690c22
-Size (jabberd-2.0s3.tar.gz) = 705819 bytes
+SHA1 (jabberd-2.0s4.tar.gz) = cb429db090982118f2b448499635ff14b91718b8
+Size (jabberd-2.0s4.tar.gz) = 716819 bytes
 SHA1 (patch-aa) = ff9a1aa6c39b7e96870d4f884de09be8307ac169
 SHA1 (patch-ab) = de1c8ec12b55117223bcca2071499c42ab145a34
 SHA1 (patch-ac) = 312a07fa6772956297789e15025e0ca0fad9ebb7
